--- a/index.html
+++ b/index.html
@@ -217,6 +217,47 @@
                     </div>
                 </div>
 
+                <!--Start of Footer section-->
+                <div class="footer">
+                        <div class="footer-logo">
+                            <div class="footer-logo-content">
+                                <img src="./images/logo/logo-2.png">
+                                <p>
+                                    NetMart business concept is to offer quality products at the best price. 
+                                    Market has since it was founded in 2023 grown into one of the world's leading 
+                                    online stores.
+                                </p>
+                                <div class="footer-icons">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                    <i class="fa-brands fa-twitter"></i>
+                                    <i class="fa-brands fa-instagram"></i>
+                                    <i class="fa-brands fa-pinterest"></i>
+                                    <i class="fa-brands fa-youtube"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="service-container">
+                            <div class="card">
+                                <i class="fa-solid fa-rocket"></i>
+                                <h3>Free Shipping</h3>
+                                <p>Free Shipping On All UK Orders</p>
+                            </div>
+                            <div class="card">
+                                <i class="fa-solid fa-sack-dollar"></i>
+                                <h3>Money Guarantee</h3>
+                                <p>30 Days Money Back Guarantee</p>
+                            </div>
+                            <div class="card">
+                                <i class="fa-solid fa-headset"></i>
+                                <h3>Support 24/7</h3>
+                                <p>We Support Online 24/7</p>
+                            </div>
+                        </div>
+                        <div class="payment-methods">
+                                <img src="./images/general/payment_options.png">
+                                <p class="">NetMart &copy; 2023. All Rights Reserved. Designed by <span>Team B</span></p>
+                        </div>
+                </div>
 
 </body>
 </html>
