shop-page added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="nav-menu">
                         <ul>
                             <li><a href="#">HOME</a></li>
-                            <li ><a href="#" id="shop-dropdown">CATEGORIES<i class="fa-sharp fa-solid fa-caret-down"></i></a>
+                            <li ><a href="#featured-products" id="shop-dropdown">CATEGORIES<i class="fa-sharp fa-solid fa-caret-down"></i></a>
                                 <!--drop-down menu for categories-->
                                 <div class="categories-sub-menu">
                                     <div class="drop-down-img">
@@ -36,36 +36,36 @@
                                     <div class="computer">
                                         <h4>COMPUTER</h4>
                                         <ul>
-                                            <li><a href="#">Desktop</a></li>
-                                            <li><a href="#">Laptop</a></li>
-                                            <li><a href="#">Keyboard</a></li>
-                                            <li><a href="#">Monitor</a></li>
-                                            <li><a href="#">Mouse</a></li>
+                                            <li><a href="./shop.html">Desktop</a></li>
+                                            <li><a href="./shop.html">Laptop</a></li>
+                                            <li><a href="./shop.html">Keyboard</a></li>
+                                            <li><a href="./shop.html">Monitor</a></li>
+                                            <li><a href="./shop.html">Mouse</a></li>
                                         </ul>
                                     </div>
                                     <div class="fashion">
                                         <h4>FASHION</h4>
                                         <ul>
-                                            <li><a href="#">Men Shoe</a></li>
-                                            <li><a href="#">Women Shoe   </a></li>
-                                            <li><a href="#">Shirt Men</a></li>
-                                            <li><a href="#">Shirt Women</a></li>
-                                            <li><a href="#">Face Cap</a></li>
+                                            <li><a href="./shop.html">Men Shoe</a></li>
+                                            <li><a href="./shop.html">Women Shoe   </a></li>
+                                            <li><a href="./shop.html">Shirt Men</a></li>
+                                            <li><a href="./shop.html">Shirt Women</a></li>
+                                            <li><a href="./shop.html">Face Cap</a></li>
                                         </ul>
                                     </div>
                                     <div class="electronics">
                                         <h4>APPLIANCES</h4>
                                         <ul>
-                                            <li><a href="#">Blender</a></li>
-                                            <li><a href="#">CCTV</a></li>
-                                            <li><a href="#">Microwave</a></li>
-                                            <li><a href="#">Pressing Iron</a></li>
-                                            <li><a href="#">Home Theater</a></li>
+                                            <li><a href="./shop.html">Blender</a></li>
+                                            <li><a href="./shop.html">CCTV</a></li>
+                                            <li><a href="./shop.html">Microwave</a></li>
+                                            <li><a href="./shop.html">Pressing Iron</a></li>
+                                            <li><a href="./shop.html">Home Theater</a></li>
                                         </ul>
                                     </div>
                                 </div>
                             </li>
-                            <li><a href="#">SHOP</a></li>
+                            <li><a href="./shop.html">SHOP</a></li>
                             <li><a href="#">HELP</a></li>    
                         </ul>
                     </div>
@@ -82,6 +82,8 @@
             </div>
         </div>
     </header>
+
+    
     <!-- Start of body section of the web page -->
 
     <!--Image slider div-->
@@ -115,14 +117,14 @@
         <div class="swiper-pagination"></div>      
     </div>
        <!--div for category-->
-        <div class="featured-products">
+        <div class="featured-products" id="featured-products">
                 <h1>Featured Products</h1>
                 <div class="category">
-                    <button class="all-btn"><a href="#">All</a></button>
-                    <button><a href="#">Men's Clothing</a></button>
-                    <button><a href="#">Electronics</a></button>
-                    <button><a href="#">Computer</a></button>
-                    <button><a href="#">Women's Wear</a></button>
+                    <button class="all-btn"><a href="./shop.html">All</a></button>
+                    <button><a href="./shop.html">Men's Clothing</a></button>
+                    <button><a href="./shop.html">Electronics</a></button>
+                    <button><a href="./shop.html">Computer</a></button>
+                    <button><a href="./shop.html">Women's Wear</a></button>
                 </div>
             
         </div>
@@ -151,7 +153,7 @@
                             </div>
                         </div>
                         <div class="swiper-slide product-slide">
-                            <img src="./images/Home-gadgets/Home_theatre_3.png">
+                            <img src="./images/Home-gadgets/Home_theatre-2.png">
                             <div class="item-price">
                                 <p>Home Theater</p>
                                     <p class="price">$200</p>
