product details added

--- a/shop.html
+++ b/shop.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./shop.css">
     <script src="https://kit.fontawesome.com/80f60694e5.js" crossorigin="anonymous"></script>
-    <script src="./index.js" defer></script>
-    <title>Document</title>
+    <script src="./shop.js" defer></script>
+    <title>Shop</title>
 </head>
 <body>
     <header>
@@ -86,142 +86,140 @@
         <!--products-->
         <div class="products-container">
             <div class="product-wrapper">
-                    <div class="product">
+                    <div class="product" id="1">
                         <img src="./images/Shoe men/shoe-1.png" alt="">
                         <div class="price-container">
                             <p>Brown Sneakers</p>
                             <p class="price">$50</p>
                         </div>
                     </div>
-                    <div class="product">
-                        <div class="product">
+                        <div class="product" id="2">
                             <img src="./images/shirt men/shirt_men_2.png" alt="">
                             <div class="price-container">
                                 <p>Long-sleeve Men</p>
                                 <p class="price">$40</p>
                             </div>
                         </div>
-                    </div>
-                    <div class="product">
+                    <div class="product" id="3">
                         <img src="./images/Shoe men/shoe-2.png" alt="">
                         <div class="price-container">
                             <p>Brown Leather</p>
                             <p class="price">$70</p>
                         </div>
                     </div>
-                    <div class="product">
+                    <div class="product" id="4">
                         <img src="./images/shirt men/shirt-1.png" alt="">
                         <div class="price-container">
                             <p>Shirt 3 in 1</p>
                             <p class="price">$100</p>
                         </div>
                     </div>
-                    <div class="product">
+                    <div class="product" id="5">
                         <img src="./images/Fashion/cap.PNG" alt="">
                         <div class="price-container">
                             <p>Face Cap</p>
                             <p class="price">$10</p>
                         </div>
                     </div>
-                    <div class="product">
+                    <div class="product" id="6">
                         <img src="./images/Shoe women/shoe_for_women_3.png" alt="">
                         <div class="price-container">
                             <p>Women Heels</p>
                             <p class="price">$50</p>
                         </div>
                     </div>
-                    <div class="product">
+                    <div class="product" id="7">
                         <img src="./images/Fashion/apple watch.png" alt="">
                         <div class="price-container">
                             <p>Apple Watch</p>
                             <p class="price">$100</p>
                         </div>
                     </div>
-                    <div class="product">
+                    <div class="product" id="8">
                         <img src="./images/Shirt women/shirt_women_2.png" alt="">
                         <div class="price-container">
                             <p>Shirt women</p>
                             <p class="price">$50</p>
                         </div>
                     </div>
-                    <div class="product">
+                    <div class="product" id="9">
                         <img src="./images/Home-gadgets/pressing_iron.png" alt="">
                         <div class="price-container">
                             <p>Pressing Iron</p>
                             <p class="price">$30</p>
                         </div>
                     </div>
-                    <div class="product">
+                    <div class="product" id="10">
                         <img src="./images/Home-gadgets/generator_2.png" alt="">
                         <div class="price-container">
                             <p>FIRMAN Generator</p>
                             <p class="price">$200</p>
                         </div>
                     </div>
-                    <div class="product">
+                    <div class="product" id="11">
                         <img src="./images/shirt men/shirt_men-3.png" alt="">
                         <div class="price-container">
                             <p>Shirt Men</p>
                             <p class="price">$50</p>
                         </div>
                     </div>
-                    <div class="product">
+                    <div class="product" id="12">
                         <img src="./images/Home-gadgets/blender.png" alt="">
                         <div class="price-container">
-                            <p>Elegant Heels</p>
+                            <p>Blender</p>
                             <p class="price">$10</p>
                         </div>
                     </div>
-                    <div class="product">
+                    <div class="product" id="13">
                         <img src="./images/Home-gadgets/headset-1.png" alt="">
                         <div class="price-container">
                             <p>Headset</p>
                             <p class="price">$30</p>
                         </div>
                     </div>
-                    <div class="product">
+                    <div class="product" id="14">
                         <img src="./images/Home-gadgets/Home_theatre-2.png" alt="">
                         <div class="price-container">
                             <p>Home Theatre</p>
                             <p class="price">$80</p>
                         </div>
                     </div>
-                    <div class="product">
+                    <div class="product" id="15">
                         <img src="./images/Home-gadgets/small-oven.png" alt="">
                         <div class="price-container">
                             <p>Small Oven</p>
                             <p class="price">$200</p>
                         </div>
                     </div>
-                    <div class="product">
+                    <div class="product" id="16">
                         <img src="./images/Home-gadgets/TV.png" alt="">
                         <div class="price-container">
                             <p>Smart TV</p>
                             <p class="price">$100</p>
                         </div>
                     </div>
-                    <div class="product">
+                    <div class="product" id="17">
                         <img src="./images/Computer/mouse-1.png" alt="">
                         <div class="price-container">
                             <p>Wireless Mouse</p>
                             <p class="price">$30</p>
                         </div>
                     </div>
-                    <div class="product">
+                    <div class="product" id="18">
                         <img src="./images/Computer/laptop 1.png" alt="">
                         <div class="price-container">
                             <p>HP Laptop</p>
                             <p class="price">$150</p>
                         </div>
                     </div>
-                    <div class="product">
+                    <div class="product" id="19">
                         <img src="./images/Computer/printer_2.png" alt="">
                         <div class="price-container">
                             <p>Deskjet Printer</p>
                             <p class="price">$90</p>
                         </div>
                     </div>
-                    <div class="product">
+                    <div class="product" id="20">
                         <img src="./images/Home-gadgets/play_station_5.png" alt="">
                         <div class="price-container">
                             <p>Play Station 5</p>
@@ -231,7 +229,15 @@
                     
             </div>
         </div>
-        
+
+        <div class="product-details" id="product-details">
+            <div class="product-image">
+                <img src="./images/Fashion/apple watch.png" alt="">    
+            </div>
+            <div class="product-info">
+            </div>
+        </div>
+        <div class="overlay" id="overlay"></div>
      <!--Start of Footer section-->
      <div class="footer">
         <div class="footer-logo">
