--- a/shop.html
+++ b/shop.html
@@ -70,11 +70,11 @@
             <!--container for search bar and cart icon -->
             <div class="cart-icon-container">
                 <div class="search-btn">
-                        <input type="text" placeholder="Search">
+                        <input type="text" placeholder="Search" id="search">
                         <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
                 <div class="cart-icon">
-                    <i class="fa-solid fa-cart-shopping" title="Cart"></i><span>$0.00</span>
+                    <i class="fa-solid fa-cart-shopping" title="Cart"><span class="count">10</span></i>
                 </div>
             </div>
         </div>
@@ -231,11 +231,6 @@
         </div>
 
         <div class="product-details" id="product-details">
-            <div class="product-image">
-                <img src="./images/Fashion/apple watch.png" alt="">    
-            </div>
-            <div class="product-info">
-            </div>
         </div>
         <div class="overlay" id="overlay"></div>
      <!--Start of Footer section-->
