cart and login added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <!---Header Section-->
     <header>
         <div class="welcome-div">
-            <!--to contain welcome message for customer and log in button-->
+            <div class="welcome-div">
+                <p>Welcome Customer</p>
+                <a href="./log-In.html">Login</a>
+            </div>
         </div>
             
         <div class="header">
