help-page added

--- a/shop.html
+++ b/shop.html
@@ -64,7 +64,7 @@
                                 </div>
                             </li>
                             <li><a href="./shop.html">SHOP</a></li>
-                            <li><a href="#">HELP</a></li>    
+                            <li><a href="./help.html">HELP</a></li>    
                         </ul>
                     </div>
             </div>
