--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./index.css">
-    <script type="module" src="./index.js"></script>
+    <script src="./index.js" defer></script>
     <script src="https://kit.fontawesome.com/80f60694e5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
@@ -69,7 +69,7 @@
                                 </div>
                             </li>
                             <li><a href="./shop.html">SHOP</a></li>
-                            <li><a href="#">HELP</a></li>    
+                            <li><a href="./help.html">HELP</a></li>    
                         </ul>
                     </div>
             </div>
@@ -78,9 +78,6 @@
                 <div class="search-btn">
                         <input type="text" placeholder="Search">
                         <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
-                <div class="cart-icon">
-                    <i class="fa-solid fa-cart-shopping" title="Cart"></i><span>$0.00</span>
                 </div>
             </div>
         </div>
