--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                     <img src="./images/logo/logo-2.png" alt="logo">
                 </div>
                     <div class="nav-menu">
-                        <ul>
-                            <li><a href="#">HOME</a></li>
-                            <li ><a href="#featured-products" id="shop-dropdown">CATEGORIES<i class="fa-sharp fa-solid fa-caret-down"></i></a>
+                        <ul id="main-menu">
+                            <li><a href="#">HOME <span><i class="fa-solid fa-xmark" id="close-menu"></i></span></a></li>
+                            <li ><a href="#" id="shop-dropdown">CATEGORIES<i class="fa-sharp fa-solid fa-caret-down"></i></a>
                                 <!--drop-down menu for categories-->
                                 <div class="categories-sub-menu">
                                     <div class="drop-down-img">
@@ -77,8 +77,9 @@
             <div class="cart-icon-container">
                 <div class="search-btn">
                         <input type="text" placeholder="Search">
-                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="fa-solid fa-magnifying-glass"></i>    
                 </div>
+                         <i class="fa-solid fa-bars" id="bar"></i>
             </div>
         </div>
     </header>
@@ -132,9 +133,9 @@
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper mySwipper-wrapper">
                         <div class="swiper-slide product-slide" >
-                            <img src="./images/Shoe men/black_shoe_for_men.png">
+                            <img src="./images/Shoe men/brown-shoe2.png">
                             <div class="item-price">
-                                <p>Men Shoe Black</p>
+                                <p>Men Shoe Brown</p>
                                     <p class="price">$100</p>
                             </div>
                         </div>
@@ -146,28 +147,28 @@
                             </div>
                         </div>
                         <div class="swiper-slide product-slide">
-                            <img src="./images/Computer/keyboard-removebg.png">
+                            <img src="./images/Computer/mouse-1.png">
                             <div class="item-price">
-                                <p>Keyboard and Mouse</p>
+                                <p>Wireless Mouse</p>
                                     <p class="price">$20</p>
                             </div>
                         </div>
                         <div class="swiper-slide product-slide">
-                            <img src="./images/Home-gadgets/Home_theatre-2.png">
+                            <img src="./images/Home-gadgets/Home_theatre_3.png">
                             <div class="item-price">
-                                <p>Home Theater</p>
-                                    <p class="price">$200</p>
+                                <p>Sound System</p>
+                                    <p class="price">$100</p>
                             </div>
                         </div>
                         <div class="swiper-slide product-slide">
-                            <img src="./images/shirt men/shirt_men_2.png">
+                            <img src="./images/shirt men/shirt-1.png">
                             <div class="item-price">
-                                <p>Long-sleeve Men</p>
+                                <p>Shirt Men</p>
                                     <p class="price ">$40</p>
                             </div>
                         </div>
                         <div class="swiper-slide product-slide">
-                            <img src="./images/Shoe women/shoe_for_women_3.png">
+                            <img src="./images/Shoe women/shoe_women-2.png">
                             <div class="item-price">
                                 <p>Women Shoe</p>
                                     <p class="price">$50</p>
@@ -181,16 +182,16 @@
                             </div>
                         </div>
                         <div class="swiper-slide product-slide">
-                            <img src="./images/Computer/laptop 1.png">
+                            <img src="./images/Computer/laptop_3.png">
                             <div class="item-price">
                                 <p>Hp Laptop</p>
                                     <p class="price">$150</p>
                             </div>
                         </div>
                         <div class="swiper-slide product-slide">
-                            <img src="./images/Home-gadgets/TV.png">
+                            <img src="./images/Home-gadgets/play_station_5__3.png">
                             <div class="item-price">
-                                <p>Smart TV</p>
+                                <p>Play Station 5</p>
                                     <p class="price">$100</p>
                             </div>
                         </div>
@@ -257,7 +258,7 @@
                         </div>
                         <div class="payment-methods">
                                 <img src="./images/general/payment_options.png">
-                                <p class="">NetMart &copy; 2023. All Rights Reserved. Designed by <span>Team B</span></p>
+                                <p class="">NetMart &copy; 2023. All Rights Reserved. Designed by <span>Team B.</span></p>
                         </div>
                 </div>
 
