--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                     <div class="nav-menu">
                         <ul id="main-menu">
-                            <li><a href="#">HOME <span><i class="fa-solid fa-xmark" id="close-menu"></i></span></a></li>
+                            <li><a href="#">HOME</a></li>
                             <li ><a href="#" id="shop-dropdown">CATEGORIES<i class="fa-sharp fa-solid fa-caret-down"></i></a>
                                 <!--drop-down menu for categories-->
                                 <div class="categories-sub-menu">
@@ -69,7 +69,8 @@
                                 </div>
                             </li>
                             <li><a href="./shop.html">SHOP</a></li>
-                            <li><a href="./help.html">HELP</a></li>    
+                            <li><a href="./help.html">HELP</a></li>   
+                            <i class="fa-solid fa-xmark" id="close-menu"></i> 
                         </ul>
                     </div>
             </div>
